<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TestStuff</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Login">Login</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="loginSuccessful">Login Successful</string>
    <string name="activity_login">Login</string>
    <string name="title_activity_login_success">LoginSuccess</string>
    <string name="dontHaveAccont">Dont have an account?\\nRegister Today!</string>
    <string name="register">Register</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="activity_register_username">Username:</string>
    <string name="activity_register_password">Password:</string>
    <string name="activity_register_email">Email:</string>
    <string name="getCustomers">Get Users</string>

</resources>
